Fix broadcast joins